Fixed table layout issue

--- a/src/main/webapp/styles/components/_tables.scss
+++ b/src/main/webapp/styles/components/_tables.scss
@@ -3,6 +3,10 @@
   text-align: center;
 }
 
+.dataTable.table td {
+  vertical-align: middle!important;
+}
+
 .td_info {
   &--value {
     line-height: 1.8rem;
